# ChangeLog for perl-core/CGI
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/CGI/ChangeLog,v 1.38 2007/03/03 20:30:20 ticho Exp $

  03 Mar 2007; Andrej Kacian <ticho@gentoo.org> CGI-3.25.ebuild:
  Stable on x86, bug #169153.

  03 Mar 2007; Michael Cummings <mcummings@gentoo.org> CGI-3.25.ebuild:
  Stable on amd64

  22 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> CGI-3.25.ebuild:
  Stable on Alpha + IA64.

  21 Jan 2007; Michael Cummings <mcummings@gentoo.org> CGI-3.25.ebuild:
  Marking sparc stable

  24 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org> CGI-3.23.ebuild:
  Stable on ppc.

*CGI-3.25 (06 Nov 2006)

  06 Nov 2006; Michael Cummings <mcummings@gentoo.org> +CGI-3.25.ebuild:
  Version bump

  25 Oct 2006; Michael Cummings <mcummings@gentoo.org> -CGI-3.10.ebuild:
  Cleaning out stale ebuild

  23 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> CGI-3.23.ebuild:
  Stable on hppa

  22 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> CGI-3.23.ebuild:
  Stable on Alpha.

  20 Oct 2006; Michael Cummings <mcummings@gentoo.org> -CGI-3.07.ebuild,
  -CGI-3.09.ebuild, CGI-3.15.ebuild, CGI-3.19.ebuild, CGI-3.23.ebuild:
  Marking amd64, sparc stable; cleaning up ebuilds

  16 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org> CGI-3.20.ebuild:
  ppc stable

  05 Sep 2006; Joshua Kinard <kumba@gentoo.org> CGI-3.20.ebuild:
  Marked stable on mips.

*CGI-3.23 (27 Aug 2006)

  27 Aug 2006; Michael Cummings <mcummings@gentoo.org> +CGI-3.23.ebuild:
  Version bump

  18 Jul 2006; Bryan Østergaard <kloeri@gentoo.org> CGI-3.20.ebuild:
  Stable on alpha.

  03 Jul 2006; Michael Cummings <mcummings@gentoo.org> CGI-3.20.ebuild:
  Marking amd64 stable

  12 Jun 2006; Michael Cummings <mcummings@gentoo.org> CGI-3.07.ebuild,
  CGI-3.09.ebuild, CGI-3.19.ebuild, CGI-3.20.ebuild:
  Marking sparc stable

  28 May 2006; Bryan Østergaard <kloeri@gentoo.org> CGI-3.15.ebuild:
  Stable on alpha.
