@@ -1,12 +1,17 @@
 DIST CGI.pm-3.25.tar.gz 235166 RMD160 e0d2163ed45e25b06be0c5e941384237854b58fb SHA1 f16007f3bcf35864c940f659178c6e2bf164ae99 SHA256 948b0e975cc5ad40c98f02a819b3beee1b33c4b2db9274d12d7f59a45169dfb6
+DIST CGI.pm-3.27.tar.gz 236822 RMD160 b31fb63811b5da14f3ac5f2b77d638d736e85496 SHA1 874497c3be6de3fb5e731feab0ef78f8f93293f1 SHA256 dcc87b9093c68440ebae418c153080c8b3888617ae9824140dafe93ed63cafe9
 EBUILD CGI-3.25.ebuild 633 RMD160 3e926f843127d9b2a4867bd788e0e25ee9f453e9 SHA1 06b1b964253c643c2f1fc6f9fbe8d3d2d9e873f1 SHA256 ad971b0ba35d679cdef64741ebe4ae4ce974997e732eb568b5d21c87cc63c4b1
 MD5 f71ac11e284c7aa211888feb76de0918 CGI-3.25.ebuild 633
 RMD160 3e926f843127d9b2a4867bd788e0e25ee9f453e9 CGI-3.25.ebuild 633
 SHA256 ad971b0ba35d679cdef64741ebe4ae4ce974997e732eb568b5d21c87cc63c4b1 CGI-3.25.ebuild 633
-MISC ChangeLog 10200 RMD160 7ab56f4717ac8c890b1f45d0d1347e23966e4e43 SHA1 0987aec27f0b845756cd77a4fc0d1325ffca9c4b SHA256 01589f9bb0786b7866ae3f1a3a1ac6c516d89ec3a152e5670824bdabd05a2fde
-MD5 b523dab06007f16367296564f0b51a6b ChangeLog 10200
-RMD160 7ab56f4717ac8c890b1f45d0d1347e23966e4e43 ChangeLog 10200
-SHA256 01589f9bb0786b7866ae3f1a3a1ac6c516d89ec3a152e5670824bdabd05a2fde ChangeLog 10200
+EBUILD CGI-3.27.ebuild 650 RMD160 64d0b1048c49d99336b75ee06eb884ec97a36cff SHA1 b8584f63835976edc12b83a320fe4ada5b745e27 SHA256 22f891fe3fd471c25d3dabbc6ceff380476132a61ae5155e8b7ff165f58d8739
+MD5 691089c2e960c62fd3728d927757dd01 CGI-3.27.ebuild 650
+RMD160 64d0b1048c49d99336b75ee06eb884ec97a36cff CGI-3.27.ebuild 650
+SHA256 22f891fe3fd471c25d3dabbc6ceff380476132a61ae5155e8b7ff165f58d8739 CGI-3.27.ebuild 650
+MISC ChangeLog 10318 RMD160 808f4abc1c4b7ff51edd87f8a459951b63f25499 SHA1 4df3bea783075ac061a27381d26666ebf1162467 SHA256 e8e920030384d174d4d32839a49c730393d6993c465cfeb0aaf1d5411b6f7884
+MD5 54a6346241f30b85044b57b575887f9b ChangeLog 10318
+RMD160 808f4abc1c4b7ff51edd87f8a459951b63f25499 ChangeLog 10318
+SHA256 e8e920030384d174d4d32839a49c730393d6993c465cfeb0aaf1d5411b6f7884 ChangeLog 10318
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
 MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
 RMD160 647980838c590f54441a053916ea629e53e551c0 metadata.xml 305
@@ -14,3 +19,6 @@ SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca metadata
 MD5 6e75a966486111e9abad21d1c78b53d8 files/digest-CGI-3.25 235
 RMD160 63ddeacbec5c2590912044ae2642630233378187 files/digest-CGI-3.25 235
 SHA256 13b91366d7218b456e6b68c7c670e24dad2a72bf27f9b626062bb6eecca0d3c1 files/digest-CGI-3.25 235
+MD5 a2448ba7b228f265324270fc11eabb9f files/digest-CGI-3.27 235
+RMD160 8227e87f672812f5fafad870ed5a8a66a75ad2dd files/digest-CGI-3.27 235
+SHA256 9b6ba9b5de3248aefd7160a8447a2391972a59a0f62a77218201235f564dfcff files/digest-CGI-3.27 235
