@@ -1,0 +1,3 @@
+MD5 866023530c0fcce501555334eef39721 CGI.pm-3.27.tar.gz 236822
+RMD160 b31fb63811b5da14f3ac5f2b77d638d736e85496 CGI.pm-3.27.tar.gz 236822
+SHA256 dcc87b9093c68440ebae418c153080c8b3888617ae9824140dafe93ed63cafe9 CGI.pm-3.27.tar.gz 236822
